--- a/chess.html
+++ b/chess.html
@@ -2,98 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech4U | Multiplayer Chess</title>
+    <title>Tech4U | Multiplayer Ludo</title>
     <script src="https://cdn.jsdelivr.net/npm/playroomkit"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
     <style>
-        body { background: #0a0b10; color: white; font-family: sans-serif; text-align: center; margin: 0; padding: 20px; }
-        #status { margin: 10px; color: #00d4ff; font-weight: bold; }
-        .board { 
-            display: grid; grid-template-columns: repeat(8, 1fr); 
-            width: 90vw; max-width: 360px; height: 90vw; max-height: 360px; 
-            margin: 0 auto; border: 5px solid #333; 
-        }
-        .square { display: flex; align-items: center; justify-content: center; font-size: 30px; cursor: pointer; }
-        .white-sq { background: #dee3e6; color: #222; }
-        .black-sq { background: #8ca2ad; color: #222; }
-        .selected { background: #ffeb3b !important; }
-        .btn { margin-top: 20px; background: #00d4ff; color: black; border: none; padding: 12px 25px; font-weight: bold; border-radius: 5px; cursor: pointer; }
+        body { background: #0a0b10; color: white; text-align: center; font-family: sans-serif; padding: 20px; }
+        #status { margin-bottom: 20px; color: #00d4ff; }
+        .dice-area { background: #161b22; padding: 30px; border-radius: 20px; border: 2px solid #333; display: inline-block; }
+        #dice-val { font-size: 60px; margin: 20px; display: block; }
+        .btn-roll { background: #00d4ff; color: black; border: none; padding: 15px 30px; font-size: 20px; font-weight: bold; border-radius: 10px; cursor: pointer; }
     </style>
 </head>
 <body>
 
-    <h2>Tech4U Multiplayer Chess</h2>
-    <div id="status">Connecting to Tech4U Servers...</div>
-    <div class="board" id="board"></div>
-    <button class="btn" onclick="location.href='index.html'">EXIT GAME</button>
+    <h1>Tech4U Ludo</h1>
+    <div id="status">Connecting...</div>
+
+    <div class="dice-area">
+        <span id="dice-val">🎲</span>
+        <button class="btn-roll" onclick="roll()">ROLL DICE</button>
+    </div>
 
     <script>
-        const { insertCoin, myPlayer, onPlayerJoin, setState, getState } = Playroom;
-        let game = new Chess();
-        let selectedSquare = null;
+        const { insertCoin, myPlayer, setState, getState } = Playroom;
 
         async function init() {
-            try {
-                // YOUR REAL GAME ID ADDED HERE
-                await insertCoin({
-                    gameId: "lSO33kfiKxPFBkaFheob",
-                    baseUrl: "https://tech4u938.github.io/Tech4U.AllGame/"
-                });
+            await insertCoin({
+                gameId: "lSO33kfiKxPFBkaFheob", // YOUR ID
+                baseUrl: "https://tech4u938.github.io/Tech4U.AllGame/"
+            });
+            document.getElementById('status').innerText = "Ready to play, " + myPlayer().getProfile().name;
 
-                document.getElementById('status').innerText = "Playing as: " + myPlayer().getProfile().name;
-                
-                // Sync the board every half second
-                setInterval(() => {
-                    const fen = getState("fen");
-                    if (fen && fen !== game.fen()) {
-                        game.load(fen);
-                        drawBoard();
-                    }
-                }, 500);
-
-                drawBoard();
-            } catch (err) {
-                document.getElementById('status').innerText = "Tap to Join Game";
-                window.onclick = () => init();
-            }
-        }
-
-        function drawBoard() {
-            const boardDiv = document.getElementById('board');
-            boardDiv.innerHTML = '';
-            const board = game.board();
-
-            for (let r = 0; r < 8; r++) {
-                for (let c = 0; c < 8; c++) {
-                    const square = board[r][c];
-                    const pos = String.fromCharCode(97 + c) + (8 - r);
-                    const sqDiv = document.createElement('div');
-                    sqDiv.className = `square ${(r + c) % 2 === 0 ? 'white-sq' : 'black-sq'}`;
-                    if (selectedSquare === pos) sqDiv.classList.add('selected');
-                    
-                    if (square) {
-                        const pieces = {
-                            'p': '♟', 'r': '♜', 'n': '♞', 'b': '♝', 'q': '♛', 'k': '♚',
-                            'P': '♙', 'R': '♖', 'N': '♘', 'B': '♗', 'Q': '♕', 'K': '♔'
-                        };
-                        sqDiv.innerText = pieces[square.type];
-                        if(square.color === 'w') sqDiv.style.color = "white";
-                    }
-                    sqDiv.onclick = () => {
-                        if (selectedSquare === null) {
-                            if (game.get(pos)) { selectedSquare = pos; drawBoard(); }
-                        } else {
-                            const move = game.move({ from: selectedSquare, to: pos, promotion: 'q' });
-                            if (move) { setState("fen", game.fen()); }
-                            selectedSquare = null;
-                            drawBoard();
-                        }
-                    };
-                    boardDiv.appendChild(sqDiv);
+            // Update dice whenever someone rolls
+            setInterval(() => {
+                const val = getState("dice");
+                const roller = getState("roller");
+                if (val) {
+                    document.getElementById('dice-val').innerText = val;
+                    document.getElementById('status').innerText = roller + " rolled a " + val;
                 }
-            }
+            }, 500);
         }
+
+        function roll() {
+            const r = Math.floor(Math.random() * 6) + 1;
+            setState("dice", r);
+            setState("roller", myPlayer().getProfile().name);
+        }
+
         init();
     </script>
 </body>
